tests/vendor/valid/trivial/spaces.c
//expect 0
//tags: trivial, simple
   int   main    (  void)  {   return  0 ; }