tests/vendor/invalid/syntax/switch_no_condition.c
//tags: simple, switch
int main() {
    switch {
        return 0;
    }
}